# ServerWithPyhsX

./: .gitignore  CMakeLists.txt  README.md
PhysX-3.3/: README.md
PhysX-3.3/APEXSDK/: UpdatePhysXPaths.vbs
PhysX-3.3/APEXSDK/common/src/: ApexSharedUtils.cpp
PhysX-3.3/APEXSDK/docs/: apex_release_notes.chm
PhysX-3.3/APEXSDK/framework/public/: NxApexDefs.h
PhysX-3.3/APEXSDK/framework/src/: ApexSDK.cpp
PhysX-3.3/PhysXSDK/: readme_android.html  readme_ios.html  readme_linux.html  readme_osx.html  readme_win.html  release_notes.html  version-PhysX.txt
PhysX-3.3/PhysXSDK/Documentation/: PhysXAPI.chi  PhysXGuide.chm
PhysX-3.3/PhysXSDK/Documentation/PhysXGuide/: .buildinfo  Index.html  objects.inv  search.html  searchindex.js
PhysX-3.3/PhysXSDK/Lib/vc12win64/: PhysX3GpuCHECKED_x64.lib  PhysX3GpuDEBUG_x64.lib
PhysX-3.3/PhysXSDK/Samples/SampleBase/: AcclaimLoader.cpp  AcclaimLoader.h  Dummy.cpp  InputEventBuffer.cpp  InputEventBuffer.h  ParticleEmitter.cpp  ParticleEmitter.h  ParticleEmitterPressure.cpp  ParticleEmitterPressure.h  ParticleEmitterRate.cpp  ParticleEmitterRate.h  ParticleFactory.cpp  ParticleFactory.h  ParticleSystem.cpp  ParticleSystem.h  PhysXSample.cpp  PhysXSample.h  PhysXSampleApplication.cpp  PhysXSampleApplication.h  Picking.cpp  Picking.h  (+68 more)
include/: PxPhysicsAPI.h
include/foundation/: PxPreprocessor.h
scenes/: snake.scene  snake4.scene  snake5.scene
src/: Scene.pb.h  physics_scene_camera.cpp  physics_scene_manager.cpp  physics_scene_manager.h  physics_scene_render.cpp  physics_scene_render.h  server_cooperation_render.cpp
(+2734 files in other folders)
